# Eagle

./: .coverage  .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  Makefile  README.md  benchmark.py  docker-compose.yml  pyproject.toml  requirements.txt  risk_engine.py
.claude/: settings.local.json
.github/workflows/: ci.yml  phase3-tests.yml  phase4-tests.yml
apps/backend/: dependencies.py  deps.py  main.py  requirements-dev.txt  requirements.txt  schemas.py  tasks.py
config/: zones.yaml
configs/: risk_policy.yaml
docs/: ARCHITECTURE.md  tensorrt_conversion.md
docs/benchmarks/: pipeline_benchmark.md  (+1 more)
eagle_surveillance.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: benchmark_kafka.py  export_finetuning_dataset.py  export_tensorrt.py  inspect_tracks.py  quantize_yolo.py  run_pipeline.py  visualize_timeline.py
services/: __init__.py
temporal-action-recognition/: .env.example  INSTALL.md  README.md
tests/: demo_lifecycle_mock_video.py  test_action_recognition.py  test_baseline.py  test_cross_camera_reid.py  test_inspect_tracks.py  test_kafka_producer.py  test_lifecycle_logger.py  test_memory.py  test_policy_loader.py  test_reasoning.py  test_reasoning_fixtures.py  test_reasoning_schema.py  test_risk_scoring.py  test_scene_graph.py  test_settings.py  test_synthetic_event_generator.py  test_tensorrt_routing.py  test_track_event_logger.py  test_tracker.py  test_trigger.py  test_visualize_timeline.py  test_zone_loader.py
utils/: synthetic_event_generator.py
yolov8n_int8_openvino_model/: metadata.yaml  yolov8n.xml
(+84 files in other folders)
